syntax = "proto3";

package pb;

option go_package = "github.com/mahdi-asadzadeh/go-kit-accounts/clients/pb";

message CreateUserRequest {
  string email = 1;
  string full_name = 2;
  string password = 3;
}

message CreateUserResponse {
  int64 id = 1;
  string email = 2;
  string full_name = 3;
  string err = 4;
}

message UpdateUserRequest {
  string email = 1;
  string full_name = 2;
}

message UpdateUserResponse {
  int64 id = 1;
  string email = 2;
  string full_name = 3;
  string err = 4;
}

message DeleteUserRequest  {
	string email = 1;
}

message DeleteUserResponse  {
	bool ok = 1;
	string err = 2;
}

message GetUserRequest {
	string email = 1;
}

message GetUserResponse  {
  int64 id = 1;
  string email = 2;
  string full_name = 3;
  string err = 4;
}

message LoginUserRequest {
  string email = 1;
  string password = 2;
}

message LoginUserResponse {
  string token = 1;
  string err = 2;
}

service USerService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {};
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {};
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {};
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {};
  rpc Login(LoginUserRequest) returns (LoginUserResponse) {};
}